interface improvements (#7)
* interface improvements

* Small README updates

* application config and logging

* storage package tweaks

* formalise server as interface and implementations

* remove interface abstraction around collection service

* update main to use service and storage refactors

* collection update struct for mutable fields

* pagination refinement

* start adding tests

* proto docstring note

* go mod tidy

* add metadata and storage utils

* fix collection test

* update to store interface

* item crud tests

* reflect store updates in service and entity layer

* add mockery

* go mod tidy

* internal error service tests using mocked store

* rename metadata type file

* add combined store tests

* small improvements

* add item service tests

* more tests

* Some Ideas

* buf generate

* remove unused vars

* build and test workflow file

* fix tests and typos
